# adaptflow_api

./: .env.example  .gitignore  Dockerfile  Dockerfile.bkp  Readme.md  Readme_enUs.md  adapt.db  docker-compose.yml  install.sh  install_docker.sh  main.py  pyproject.toml  requirements.txt  requirements_docker.txt
.github/workflows/: build.yml  porter_stack_adaptapi.yml
src/: app.py
src/classes/: AutoML.py  Model.py
src/database/: config.py  database.py
src/database/models/: File.py  Result.py
src/utils/: automl_handler.py  base_encoder.py  check_data_drift.py  converter.py  eval_models.py
tests/: test001.py
